terraform/modules/networking/main.tf
# Создание VPC
resource "aws_vpc" "main" {
  cidr_block           = var.vpc_cidr
  enable_dns_hostnames = true
  enable_dns_support   = true

  tags = {
    Name = "projectlev-vpc"
  }
}

# Создание Internet Gateway
resource "aws_internet_gateway" "main" {
  vpc_id = aws_vpc.main.id

  tags = {
    Name = "projectlev-igw"
  }
}

# Создание публичных подсетей
resource "aws_subnet" "public" {
  count                   = length(var.public_subnet_cidrs)
  vpc_id                  = aws_vpc.main.id
  cidr_block              = var.public_subnet_cidrs[count.index]
  availability_zone       = var.availability_zones[count.index]
  map_public_ip_on_launch = true

  tags = {
    Name = "projectlev-public-subnet-${count.index + 1}"
  }
}

# Создание приватных подсетей
resource "aws_subnet" "private" {
  count             = length(var.private_subnet_cidrs)
  vpc_id            = aws_vpc.main.id
  cidr_block        = var.private_subnet_cidrs[count.index]
  availability_zone = var.availability_zones[count.index]

  tags = {
    Name = "projectlev-private-subnet-${count.index + 1}"
  }
}

# Создание NAT Gateway
resource "aws_nat_gateway" "main" {
  allocation_id = aws_eip.nat[0].id
  subnet_id     = aws_subnet.public[0].id

  tags = {
    Name = "projectlev-nat-gw"
  }

  depends_on = [aws_internet_gateway.main]
}

# Создание Elastic IP для NAT Gateway
  resource "aws_eip" "nat" {
    domain        = "vpc"  
    count      = 1

    tags = {
      Name = "projectlev-nat-eip"
    }
  }

# Создание таблицы маршрутизации для публичных подсетей
resource "aws_route_table" "public" {
  vpc_id = aws_vpc.main.id

  route {
    cidr_block = "0.0.0.0/0"
    gateway_id = aws_internet_gateway.main.id
  }

  tags = {
    Name = "projectlev-public-rt"
  }
}

# Создание таблицы маршрутизации для приватных подсетей
resource "aws_route_table" "private" {
  vpc_id = aws_vpc.main.id

  route {
    cidr_block     = "0.0.0.0/0"
    nat_gateway_id = aws_nat_gateway.main.id
  }

  tags = {
    Name = "projectlev-private-rt"
  }
}

# Ассоциация публичных подсетей с таблицей маршрутизации
resource "aws_route_table_association" "public" {
  count          = length(var.public_subnet_cidrs)
  subnet_id      = aws_subnet.public[count.index].id
  route_table_id = aws_route_table.public.id
}

# Ассоциация приватных подсетей с таблицей маршрутизации
resource "aws_route_table_association" "private" {
  count          = length(var.private_subnet_cidrs)
  subnet_id      = aws_subnet.private[count.index].id
  route_table_id = aws_route_table.private.id
}
